# syslog2

./: Cargo.toml  LICENSE  README.md
src/: facility.rs  lib.rs  logMask.rs  logOptions.rs  priority.rs  severity.rs  syslogRfc.rs  syslogRfcConstructor.rs  unix.rs  vecU8PushStr.rs  windows.rs
src/rfc5424/: atomicI32.rs  mod.rs  structuredData.rs  structuredDataElement.rs  structuredDataParameter.rs  truncatedUsAsciiPrintableString.rs
src/syslogSenders/: insecureBlockingUdpSyslogSender.rs  insecureThreadUnsafeBlockingTcpSyslogSender.rs  mod.rs  posixSyslogSender.rs  rfc3164Facility.rs  syslogSender.rs
