# This file is part of syslog. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/syslog/master/COPYRIGHT. No part of syslog, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of syslog. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/syslog/master/COPYRIGHT.

[package]
name = "syslog"
description = "definitions for syslog"
keywords = ["reflection"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/syslog/blob/master/README.md"
homepage = "https://github.com/lemonrock/syslog"
repository = "https://github.com/lemonrock/syslog.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[replace]
"libc:0.2.11" = { git = "https://github.com/lemonrock/libc", branch = "temp" }

[dependencies]
libc = "0.2.11"
bitflags = "^0.6"
time = "0.1"
cfg-if = "^0.1"
once = { version = "0.2.1", git = "https://github.com/phil-opp/rust-once", rev = "45d4ae2982e4292d07ad41803fa9e6576f7534f4" }
try-finally = { version = "0.0.0", git = "https://github.com/lemonrock/try-finally" }
network-constants = { path = "components/network-constants" }
process = { path = "components/process" }
string-utilities = { path = "components/string-utilities" }
uptime = { git = "https://github.com/lemonrock/uptime" }
